remove ternary support for `?:` (yui script uses `then/else`)

--- a/syntaxes/yuiscript.tmLanguage.yaml
+++ b/syntaxes/yuiscript.tmLanguage.yaml
@@ -295,7 +295,7 @@ repository:
                   - include: "#expression"
             - include: "#punctuation-comma"
     ternary-expression:
-        begin: (?!\?\.\s*[^[:digit:]])(then)(?!\?)
+        begin: \s*(then)
         beginCaptures:
             "1":
                 name: keyword.operator.ternary.js
