--- a/syntaxes/yuiscript.tmLanguage.yaml
+++ b/syntaxes/yuiscript.tmLanguage.yaml
@@ -121,7 +121,6 @@ repository:
                       name: storage.type.function.arrow.js
               end: ((?<=\}|\S)(?<!=>)|((?!\{)(?=\S)))(?!\/[\/\*])
               patterns:
-                  - include: "#single-line-comment-consuming-line-ending"
                   - include: "#expression"
     object-literal:
         name: meta.objectliteral.js
@@ -671,20 +670,7 @@ repository:
         match: \\(x[0-9A-Fa-f]{2}|u[0-9A-Fa-f]{4}|u\{[0-9A-Fa-f]+\}|[0-2][0-7]{0,2}|3[0-6][0-7]?|37[0-7]?|[4-7][0-7]?|.|$)
     comment:
         patterns:
-            - name: comment.block.js
-              begin: (/\*)(?:\s*((@)internal)(?=\s|(\*/)))?
-              beginCaptures:
-                  "1":
-                      name: punctuation.definition.comment.js
-                  "2":
-                      name: storage.type.internaldeclaration.js
-                  "3":
-                      name: punctuation.decorator.internaldeclaration.js
-              end: \*/
-              endCaptures:
-                  "0":
-                      name: punctuation.definition.comment.js
-            - begin: (^[ \t]+)?((//)(?:\s*((@)internal)(?=\s|$))?)
+            - begin: (^[ \t]+)?((//))
               beginCaptures:
                   "1":
                       name: punctuation.whitespace.comment.leading.js
@@ -692,27 +678,8 @@ repository:
                       name: comment.line.double-slash.js
                   "3":
                       name: punctuation.definition.comment.js
-                  "4":
-                      name: storage.type.internaldeclaration.js
-                  "5":
-                      name: punctuation.decorator.internaldeclaration.js
               end: (?=$)
               contentName: comment.line.double-slash.js
-    single-line-comment-consuming-line-ending:
-        begin: (^[ \t]+)?((//)(?:\s*((@)internal)(?=\s|$))?)
-        beginCaptures:
-            "1":
-                name: punctuation.whitespace.comment.leading.js
-            "2":
-                name: comment.line.double-slash.js
-            "3":
-                name: punctuation.definition.comment.js
-            "4":
-                name: storage.type.internaldeclaration.js
-            "5":
-                name: punctuation.decorator.internaldeclaration.js
-        end: (?=^)
-        contentName: comment.line.double-slash.js
     brackets:
         patterns:
             - begin: "{"
