remove more javascript junk

--- a/syntaxes/yuiscript.tmLanguage.yaml
+++ b/syntaxes/yuiscript.tmLanguage.yaml
@@ -80,48 +80,14 @@ repository:
                       name: storage.modifier.async.js
                   "2":
                       name: variable.parameter.js
-            - name: meta.arrow.js
-              begin: >-
-                  (?x) (?:
-                    (?<![_$[:alnum:]])(?:(?<=\.\.\.)|(?<!\.))(\basync)
-                  )? ((?<![})!\]])\s*
-                    (?=
-                      # sure shot arrow functions even if => is on new line
-                  (
-                    (<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<]|\<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<]|\<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<])*\>)*\>)*>\s*)?
-                    [(]\s*(\/\*([^\*]|(\*[^\/]))*\*\/\s*)*
-                    (
-                      ([)]\s*:) |                                                                                       # ():
-                      ((\.\.\.\s*)?[_$[:alpha:]][_$[:alnum:]]*\s*:)                                                                  # [(]param: | [(]...param:
-                    )
-                  ) |
-
-                  (
-                    [<]\s*[_$[:alpha:]][_$[:alnum:]]*\s+extends\s*[^=>]                                                              # < typeparam extends
-                  ) |
-
-                  # arrow function possible to detect only with => on same line
-
-                  (
-                    (<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<]|\<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<]|\<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<])*\>)*\>)*>\s*)?                                                                                 # typeparameters
-                    \(\s*(\/\*([^\*]|(\*[^\/]))*\*\/\s*)*(([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\])|(\.\.\.\s*[_$[:alpha:]]))([^()\'\"\`]|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\'([^\'\\]|\\.)*\')|(\"([^\"\\]|\\.)*\")|(\`([^\`\\]|\\.)*\`))*)?\)   # parameters
-                    (\s*:\s*([^<>\(\)\{\}]|\<([^<>]|\<([^<>]|\<[^<>]+\>)+\>)+\>|\([^\(\)]+\)|\{[^\{\}]+\})+)?                                                                        # return type
-                    \s*=>                                                                                               # arrow operator
-                  )
-                    )
-                  )
-              beginCaptures:
-                  "1":
-                      name: storage.modifier.async.js
-              end: (?==>|\{|(^\s*(export|function|class|interface|let|var|const|import|enum|namespace|module|type|abstract|declare)\s+))
-            - name: meta.arrow.js
-              begin: =>
-              beginCaptures:
-                  "0":
-                      name: storage.type.function.arrow.js
-              end: ((?<=\}|\S)(?<!=>)|((?!\{)(?=\S)))(?!\/[\/\*])
-              patterns:
-                  - include: "#expression"
+            # - name: meta.arrow.js
+            #   begin: =>
+            #   beginCaptures:
+            #       "0":
+            #           name: storage.type.function.arrow.js
+            #   end: ((?<=\}|\S)(?<!=>)|((?!\{)(?=\S)))(?!\/[\/\*])
+            #   patterns:
+            #       - include: "#expression"
     object-literal:
         name: meta.objectliteral.js
         begin: \{
@@ -183,13 +149,9 @@ repository:
                     (<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<]|\<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<]|\<\s*([_$[:alpha:]]|(\{([^\{\}]|(\{([^\{\}]|\{[^\{\}]*\})*\}))*\})|(\(([^\(\)]|(\(([^\(\)]|\([^\(\)]*\))*\)))*\))|(\[([^\[\]]|(\[([^\[\]]|\[[^\[\]]*\])*\]))*\]))([^=<>]|=[^<])*\>)*\>)*>\s*)?
                     [(]\s*(\/\*([^\*]|(\*[^\/]))*\*\/\s*)*
                     (
-                      ([)]\s*:) |                                                                                       # ():
-                      ((\.\.\.\s*)?[_$[:alpha:]][_$[:alnum:]]*\s*:)                                                                  # [(]param: | [(]...param:
+                      ([)]\s*:) |                                                                 # ():
+                      ((\.\.\.\s*)?[_$[:alpha:]][_$[:alnum:]]*\s*:)                               # [(]param: | [(]...param:
                     )
-                  ) |
-
-                  (
-                    [<]\s*[_$[:alpha:]][_$[:alnum:]]*\s+extends\s*[^=>]                                                              # < typeparam extends
                   ) |
 
                   # arrow function possible to detect only with => on same line
@@ -526,8 +488,8 @@ repository:
               match: "[_$[:alpha:]][_$[:alnum:]]*"
     object-identifiers:
         patterns:
-            - name: support.class.js
-              match: ([_$[:alpha:]][_$[:alnum:]]*)(?=\s*\??\.\s*prototype\b(?!\$))
+            # - name: support.class.js
+            #   match: ([_$[:alpha:]][_$[:alnum:]]*)(?=\s*\??\.\s*prototype\b(?!\$))
             - match: |-
                   (?x)(?:(\.)|(\?\.(?!\s*[[:digit:]])))\s*(?:
                     (\#?[[:upper:]][_$[:digit:][:upper:]]*) |
@@ -615,7 +577,7 @@ repository:
         match: \\(x[0-9A-Fa-f]{2}|u[0-9A-Fa-f]{4}|u\{[0-9A-Fa-f]+\}|[0-2][0-7]{0,2}|3[0-6][0-7]?|37[0-7]?|[4-7][0-7]?|.|$)
     comment:
         patterns:
-            - begin: (^[ \t]+)?((//))
+            - begin: (^[ ]+)?((//))
               beginCaptures:
                   "1":
                       name: punctuation.whitespace.comment.leading.js
