disable spread operator (may implement later)

--- a/syntaxes/yuiscript.tmLanguage.yaml
+++ b/syntaxes/yuiscript.tmLanguage.yaml
@@ -183,14 +183,15 @@ repository:
               captures:
                   "0":
                       name: meta.object-literal.key.js
-            - name: meta.object.member.js
-              begin: \.\.\.
-              beginCaptures:
-                  "0":
-                      name: keyword.operator.spread.js
-              end: (?=,|\})
-              patterns:
-                  - include: "#expression"
+            ## disabled until implemented ##
+            # - name: meta.object.member.js
+            #   begin: \.\.\.
+            #   beginCaptures:
+            #       "0":
+            #           name: keyword.operator.spread.js
+            #   end: (?=,|\})
+            #   patterns:
+            #       - include: "#expression"
             - name: meta.object.member.js
               match: ([_$[:alpha:]][_$[:alnum:]]*)\s*(?=,|\}|$|\/\/|\/\*)
               captures:
